--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             font-family: 'Poppins', sans-serif;
             background-color: #121212;
-            color: #eee;
+            color: #fff;
         }
         header {
             background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
@@ -76,10 +76,6 @@
             font-size: 1.1em;
             background-color: #1a1a1a;
         }
-        .yellow { background: linear-gradient(45deg, #ffde59, #ff914d); }
-        .purple { background: linear-gradient(45deg, #a18cd1, #fbc2eb); }
-        .green { background: linear-gradient(45deg, #56ab2f, #a8e063); }
-        .maroon { background: linear-gradient(45deg, #800000, #b30000); }
     </style>
 </head>
 <body>
@@ -95,7 +91,7 @@
 
     <!-- Tutorial Start -->
     <div class="accordion-item">
-        <div class="accordion-header green">Controlling a 4WD Car Using Firebase</div>
+        <div class="accordion-header">Controlling a 4WD Car Using Firebase</div>
         <div class="accordion-content">
             <a href="tutorials/Controlling4WDFirebase/index.html" target="_blank">Open Tutorial</a>
         </div>
@@ -104,19 +100,19 @@
 
     <!-- Add more dummy tutorials here -->
     <div class="accordion-item">
-        <div class="accordion-header green">Tutorial Dummy 1</div>
+        <div class="accordion-header">Tutorial Dummy 1</div>
         <div class="accordion-content">
             <a href="tutorials/Dummy1/index.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
     <div class="accordion-item">
-        <div class="accordion-header green">Tutorial Dummy 2</div>
+        <div class="accordion-header">Tutorial Dummy 2</div>
         <div class="accordion-content">
             <a href="tutorials/Dummy2/index.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
     <div class="accordion-item">
-        <div class="accordion-header green">Tutorial Dummy 3</div>
+        <div class="accordion-header">Tutorial Dummy 3</div>
         <div class="accordion-content">
             <a href="tutorials/Dummy3/index.html" target="_blank">Open Tutorial</a>
         </div>
@@ -129,7 +125,7 @@
 <div class="accordion">
 
     <div class="accordion-item">
-        <div class="accordion-header maroon">Interfacing Joystick to Arduino</div>
+        <div class="accordion-header">Interfacing Joystick to Arduino</div>
         <div class="accordion-content">
             <a href="tutorials/InterfacingJoystickArduino/index.html" target="_blank">Open Tutorial</a>
         </div>
@@ -137,19 +133,19 @@
 
     <!-- Add more dummy tutorials here -->
     <div class="accordion-item">
-        <div class="accordion-header maroon">Tutorial Dummy 4</div>
+        <div class="accordion-header">Tutorial Dummy 4</div>
         <div class="accordion-content">
             <a href="tutorials/Dummy4/index.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
     <div class="accordion-item">
-        <div class="accordion-header maroon">Tutorial Dummy 5</div>
+        <div class="accordion-header">Tutorial Dummy 5</div>
         <div class="accordion-content">
             <a href="tutorials/Dummy5/index.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
     <div class="accordion-item">
-        <div class="accordion-header maroon">Tutorial Dummy 6</div>
+        <div class="accordion-header">Tutorial Dummy 6</div>
         <div class="accordion-content">
             <a href="tutorials/Dummy6/index.html" target="_blank">Open Tutorial</a>
         </div>
@@ -162,14 +158,14 @@
 <div class="accordion">
 
     <div class="accordion-item">
-        <div class="accordion-header purple">AccessPoint ESP8266 Hotspot</div>
+        <div class="accordion-header">AccessPoint ESP8266 Hotspot</div>
         <div class="accordion-content">
             <a href="tutorials/AccessPointESP8266Hotspot/index.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
 
     <div class="accordion-item">
-        <div class="accordion-header yellow">Bluetooth controlling LED light</div>
+        <div class="accordion-header">Bluetooth controlling LED light</div>
         <div class="accordion-content">
             <a href="tutorials/BluetoothControllingLED/index.html" target="_blank">Open Tutorial</a>
         </div>
@@ -177,13 +173,13 @@
 
     <!-- Add more dummy tutorials here -->
     <div class="accordion-item">
-        <div class="accordion-header yellow">Tutorial Dummy 7</div>
+        <div class="accordion-header">Tutorial Dummy 7</div>
         <div class="accordion-content">
             <a href="tutorials/Dummy7/index.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
     <div class="accordion-item">
-        <div class="accordion-header yellow">Tutorial Dummy 8</div>
+        <div class="accordion-header">Tutorial Dummy 8</div>
         <div class="accordion-content">
             <a href="tutorials/Dummy8/index.html" target="_blank">Open Tutorial</a>
         </div>
@@ -196,7 +192,7 @@
 <div class="accordion">
     <!-- Empty for now, can be filled later -->
     <div class="accordion-item">
-        <div class="accordion-header purple">Raspberry Pi Tutorial Dummy</div>
+        <div class="accordion-header">Raspberry Pi Tutorial Dummy</div>
         <div class="accordion-content">
             <a href="tutorials/RaspberryPiTutorial/index.html" target="_blank">Open Tutorial</a>
         </div>
