--- a/index.html
+++ b/index.html
@@ -3,131 +3,167 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robopie Tutorials</title>
+    <title>Robopie Inc. Tutorials</title>
+
     <style>
         body {
+            background-color: #0d0d0d;
+            color: #ffffff;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
-            font-family: 'Poppins', sans-serif;
-            background-color: #121212;
-            color: #eee;
+            padding: 0;
         }
         header {
-            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            background: linear-gradient(90deg, #800000, #6A0DAD, #228B22, #FFDD00);
             padding: 20px;
             text-align: center;
-            color: #fff;
+            font-size: 28px;
+            font-weight: bold;
+            letter-spacing: 1px;
+            color: #ffffff;
+            text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
         }
-        h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-        p {
+        .subheader {
+            font-size: 16px;
             margin-top: 5px;
-            font-size: 1.2em;
-            color: #ccc;
+            color: #ddd;
         }
         .accordion {
-            width: 90%;
-            margin: 20px auto;
+            margin: 20px;
         }
         .accordion-item {
-            background-color: #222;
+            background-color: #1a1a1a;
+            border: 1px solid #333;
             margin-bottom: 10px;
             border-radius: 8px;
             overflow: hidden;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+            transition: all 0.3s ease;
         }
         .accordion-header {
-            background: linear-gradient(45deg, #ffde59, #ff914d);
+            background: linear-gradient(90deg, #6A0DAD, #FFDD00);
             padding: 15px;
-            font-size: 1.5em;
             cursor: pointer;
-            transition: background 0.3s, transform 0.2s;
+            font-weight: bold;
+            font-size: 18px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
         .accordion-header:hover {
-            filter: brightness(1.2);
-            transform: scale(1.02);
+            background: linear-gradient(90deg, #FFDD00, #6A0DAD);
         }
         .accordion-content {
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.5s ease, padding 0.3s ease;
-            background-color: #1c1c1c;
-            padding: 0 15px;
+            display: none;
+            background-color: #262626;
+            padding: 15px;
         }
         .accordion-content a {
-            color: #00ffcc;
-            text-decoration: underline;
-            display: block;
-            margin: 10px 0;
+            display: inline-block;
+            margin-top: 10px;
+            text-decoration: none;
+            color: #00ff88;
+            font-weight: bold;
+            border: 1px solid #00ff88;
+            padding: 8px 15px;
+            border-radius: 5px;
+            transition: background 0.3s;
         }
-        .footer {
-            margin-top: 50px;
-            text-align: center;
-            padding: 20px;
-            color: #aaa;
-            font-size: 1.1em;
+        .accordion-content a:hover {
+            background-color: #00ff88;
+            color: #0d0d0d;
+        }
+        footer {
             background-color: #1a1a1a;
+            text-align: center;
+            padding: 15px;
+            font-size: 14px;
+            margin-top: 30px;
+            border-top: 1px solid #333;
+            color: #888;
         }
-        .yellow { background: linear-gradient(45deg, #ffde59, #ff914d); }
-        .purple { background: linear-gradient(45deg, #a18cd1, #fbc2eb); }
-        .green { background: linear-gradient(45deg, #56ab2f, #a8e063); }
-        .maroon { background: linear-gradient(45deg, #800000, #b30000); }
+        .arrow {
+            transition: transform 0.3s;
+        }
+        .arrow.rotate {
+            transform: rotate(90deg);
+        }
     </style>
+
 </head>
 <body>
 
 <header>
-    <h1>Robopie Inc.</h1>
-    <p>Explore Our Tutorials</p>
+    Robopie Inc. Tutorials
+    <div class="subheader">Explore our exciting electronics projects 🚀</div>
 </header>
 
 <div class="accordion">
 
     <div class="accordion-item">
-        <div class="accordion-header yellow">4-Digit Password Lock Using Keypad & Servo Motor</div>
+        <div class="accordion-header" onclick="toggleAccordion(this)">
+            4-Digit Password Lock Using Keypad & Servo Motor with Arduino
+            <span class="arrow">&#9654;</span>
+        </div>
         <div class="accordion-content">
             <a href="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
 
     <div class="accordion-item">
-        <div class="accordion-header purple">Automatic Plant Watering System Using Soil Moisture Sensor</div>
+        <div class="accordion-header" onclick="toggleAccordion(this)">
+            Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
+            <span class="arrow">&#9654;</span>
+        </div>
         <div class="accordion-content">
             <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
 
     <div class="accordion-item">
-        <div class="accordion-header maroon">Controlling a 7-Segment Display via Serial Monitor</div>
+        <div class="accordion-header" onclick="toggleAccordion(this)">
+            Controlling a 7-Segment Display via Serial Monitor using Arduino
+            <span class="arrow">&#9654;</span>
+        </div>
         <div class="accordion-content">
             <a href="Controlling a 7-Segment Display via Serial Monitor using Arduino/Controllinga7SegmentDisplayviaSerialMonitorus.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
 
     <div class="accordion-item">
-        <div class="accordion-header green">Electronics and Robotics Terms for Students</div>
+        <div class="accordion-header" onclick="toggleAccordion(this)">
+            Electronics and Robotics Terms for Students
+            <span class="arrow">&#9654;</span>
+        </div>
         <div class="accordion-content">
             <a href="Electronics and Robotics Terms for Students/ElectronicsandRoboticsTermsforStudents.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
 
     <div class="accordion-item">
-        <div class="accordion-header purple">Neopixel LED</div>
+        <div class="accordion-header" onclick="toggleAccordion(this)">
+            Neopixel LED
+            <span class="arrow">&#9654;</span>
+        </div>
         <div class="accordion-content">
             <a href="Neopixle LED/NeopixelLED.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
 
     <div class="accordion-item">
-        <div class="accordion-header maroon">SMART DUSTBIN SYSTEM TUTORIAL</div>
+        <div class="accordion-header" onclick="toggleAccordion(this)">
+            SMART DUSTBIN SYSTEM TUTORIAL
+            <span class="arrow">&#9654;</span>
+        </div>
         <div class="accordion-content">
             <a href="SMART DUSTBIN SYSTEM TUTORIAL/SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
 
     <div class="accordion-item">
-        <div class="accordion-header green">Ultrasonic Radar with Arduino</div>
+        <div class="accordion-header" onclick="toggleAccordion(this)">
+            Ultrasonic Radar with Arduino
+            <span class="arrow">&#9654;</span>
+        </div>
         <div class="accordion-content">
             <a href="Ultrasonic Radar with Arduino/UltrasonicRadarwithArduino.html" target="_blank">Open Tutorial</a>
         </div>
@@ -135,29 +171,22 @@
 
 </div>
 
-<div class="footer">
-    Connect with us on Instagram: <br><b>@robo_pie</b>  
-</div>
+<footer>
+    © Robopie Inc. 2025 | Follow us on <a href="https://www.instagram.com/robo_pie/" target="_blank" style="color:#ffdd00;">@robo_pie</a>
+</footer>
 
 <script>
-    const headers = document.querySelectorAll('.accordion-header');
-    headers.forEach(header => {
-        header.addEventListener('click', () => {
-            const open = document.querySelector('.accordion-content[style*="max-height: 500px"]');
-            if (open && open !== header.nextElementSibling) {
-                open.style.maxHeight = null;
-                open.style.padding = "0 15px";
-            }
-            const content = header.nextElementSibling;
-            if (content.style.maxHeight) {
-                content.style.maxHeight = null;
-                content.style.padding = "0 15px";
-            } else {
-                content.style.maxHeight = content.scrollHeight + "px";
-                content.style.padding = "15px";
-            }
-        });
-    });
+function toggleAccordion(element) {
+    const content = element.nextElementSibling;
+    const arrow = element.querySelector('.arrow');
+    if (content.style.display === "block") {
+        content.style.display = "none";
+        arrow.classList.remove('rotate');
+    } else {
+        content.style.display = "block";
+        arrow.classList.add('rotate');
+    }
+}
 </script>
 
 </body>
