--- a/index.html
+++ b/index.html
@@ -1,178 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robopie Inc. Tutorials</title>
-
-    <style>
-        body {
-            background-color: #0d0d0d;
-            color: #ffffff;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: linear-gradient(90deg, #800000, #6A0DAD, #228B22, #FFDD00);
-            padding: 20px;
-            text-align: center;
-            font-size: 28px;
-            font-weight: bold;
-            letter-spacing: 1px;
-            color: #ffffff;
-            text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-        }
-        .subheader {
-            font-size: 16px;
-            margin-top: 5px;
-            color: #ddd;
-        }
-        .accordion {
-            margin: 20px;
-        }
-        .accordion-item {
-            background-color: #1a1a1a;
-            border: 1px solid #333;
-            margin-bottom: 10px;
-            border-radius: 8px;
-            overflow: hidden;
-            transition: all 0.3s ease;
-        }
-        .accordion-header {
-            background: linear-gradient(90deg, #6A0DAD, #FFDD00);
-            padding: 15px;
-            cursor: pointer;
-            font-weight: bold;
-            font-size: 18px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .accordion-header:hover {
-            background: linear-gradient(90deg, #FFDD00, #6A0DAD);
-        }
-        .accordion-content {
-            display: none;
-            background-color: #262626;
-            padding: 15px;
-        }
-        .accordion-content a {
-            display: inline-block;
-            margin-top: 10px;
-            text-decoration: none;
-            color: #00ff88;
-            font-weight: bold;
-            border: 1px solid #00ff88;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        .accordion-content a:hover {
-            background-color: #00ff88;
-            color: #0d0d0d;
-        }
-        footer {
-            background-color: #1a1a1a;
-            text-align: center;
-            padding: 15px;
-            font-size: 14px;
-            margin-top: 30px;
-            border-top: 1px solid #333;
-            color: #888;
-        }
-        .arrow {
-            transition: transform 0.3s;
-        }
-        .arrow.rotate {
-            transform: rotate(90deg);
-        }
-    </style>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Robopie Inc. Tutorials</title>
+  <style>
+    body {
+      background-color: #0d0d0d;
+      color: #ffffff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #104046;
+      padding: 20px;
+      text-align: center;
+      font-size: 30px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      color: #ffffff;
+    }
+    .subheader {
+      font-size: 16px;
+      margin-top: 5px;
+      color: #bbb;
+    }
+    .category-title {
+      font-size: 24px;
+      margin: 30px 20px 10px;
+      color: #00c9a7;
+      border-bottom: 2px solid #00c9a7;
+      padding-bottom: 5px;
+    }
+    .accordion {
+      margin: 10px 20px;
+    }
+    .accordion-item {
+      background-color: #104046;
+      border: 1px solid #1e5a60;
+      margin-bottom: 10px;
+      border-radius: 8px;
+      overflow: hidden;
+      transition: all 0.3s ease;
+    }
+    .accordion-header {
+      padding: 15px;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 18px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .accordion-header:hover {
+      background-color: #14616a;
+    }
+    .accordion-content {
+      display: none;
+      background-color: #0d0d0d;
+      padding: 15px;
+    }
+    .accordion-content a {
+      display: inline-block;
+      margin-top: 10px;
+      text-decoration: none;
+      color: #00ff88;
+      font-weight: bold;
+      border: 1px solid #00ff88;
+      padding: 8px 15px;
+      border-radius: 5px;
+      transition: background 0.3s;
+    }
+    .accordion-content a:hover {
+      background-color: #00ff88;
+      color: #0d0d0d;
+    }
+    footer {
+      background-color: #104046;
+      text-align: center;
+      padding: 15px;
+      font-size: 14px;
+      margin-top: 40px;
+      color: #bbb;
+    }
+    .arrow {
+      transition: transform 0.3s;
+    }
+    .arrow.rotate {
+      transform: rotate(90deg);
+    }
+  </style>
 </head>
+
 <body>
 
 <header>
-    Robopie Inc. Tutorials
-    <div class="subheader">Explore our exciting electronics projects 🚀</div>
+  Robopie Inc. Tutorials
+  <div class="subheader">Learn | Build | Innovate</div>
 </header>
 
+<!-- Basics -->
+<div class="category-title">Basics</div>
 <div class="accordion">
 
-    <div class="accordion-item">
-        <div class="accordion-header" onclick="toggleAccordion(this)">
-            4-Digit Password Lock Using Keypad & Servo Motor with Arduino
-            <span class="arrow">&#9654;</span>
-        </div>
-        <div class="accordion-content">
-            <a href="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">Open Tutorial</a>
-        </div>
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Electronics and Robotics Terms for Students
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="accordion-content">
+      <a href="Electronics and Robotics Terms for Students/ElectronicsandRoboticsTermsforStudents.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
 
-    <div class="accordion-item">
-        <div class="accordion-header" onclick="toggleAccordion(this)">
-            Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
-            <span class="arrow">&#9654;</span>
-        </div>
-        <div class="accordion-content">
-            <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Open Tutorial</a>
-        </div>
-    </div>
+</div>
 
-    <div class="accordion-item">
-        <div class="accordion-header" onclick="toggleAccordion(this)">
-            Controlling a 7-Segment Display via Serial Monitor using Arduino
-            <span class="arrow">&#9654;</span>
-        </div>
-        <div class="accordion-content">
-            <a href="Controlling a 7-Segment Display via Serial Monitor using Arduino/Controllinga7SegmentDisplayviaSerialMonitorus.html" target="_blank">Open Tutorial</a>
-        </div>
-    </div>
+<!-- Robotics -->
+<div class="category-title">Robotics</div>
+<div class="accordion">
 
-    <div class="accordion-item">
-        <div class="accordion-header" onclick="toggleAccordion(this)">
-            Electronics and Robotics Terms for Students
-            <span class="arrow">&#9654;</span>
-        </div>
-        <div class="accordion-content">
-            <a href="Electronics and Robotics Terms for Students/ElectronicsandRoboticsTermsforStudents.html" target="_blank">Open Tutorial</a>
-        </div>
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      4-Digit Password Lock Using Keypad & Servo Motor with Arduino
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="accordion-content">
+      <a href="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
 
-    <div class="accordion-item">
-        <div class="accordion-header" onclick="toggleAccordion(this)">
-            Neopixel LED
-            <span class="arrow">&#9654;</span>
-        </div>
-        <div class="accordion-content">
-            <a href="Neopixle LED/NeopixelLED.html" target="_blank">Open Tutorial</a>
-        </div>
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      SMART DUSTBIN SYSTEM TUTORIAL
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="accordion-content">
+      <a href="SMART DUSTBIN SYSTEM TUTORIAL/SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
 
-    <div class="accordion-item">
-        <div class="accordion-header" onclick="toggleAccordion(this)">
-            SMART DUSTBIN SYSTEM TUTORIAL
-            <span class="arrow">&#9654;</span>
-        </div>
-        <div class="accordion-content">
-            <a href="SMART DUSTBIN SYSTEM TUTORIAL/SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">Open Tutorial</a>
-        </div>
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Ultrasonic Radar with Arduino
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="accordion-content">
+      <a href="Ultrasonic Radar with Arduino/UltrasonicRadarwithArduino.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
 
-    <div class="accordion-item">
-        <div class="accordion-header" onclick="toggleAccordion(this)">
-            Ultrasonic Radar with Arduino
-            <span class="arrow">&#9654;</span>
-        </div>
-        <div class="accordion-content">
-            <a href="Ultrasonic Radar with Arduino/UltrasonicRadarwithArduino.html" target="_blank">Open Tutorial</a>
-        </div>
+</div>
+
+<!-- IoT -->
+<div class="category-title">IoT</div>
+<div class="accordion">
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="accordion-content">
+      <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+</div>
+
+<!-- Raspberry Pi -->
+<div class="category-title">Raspberry Pi</div>
+<div class="accordion">
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Neopixel LED
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Neopixle LED/NeopixelLED.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
 
 </div>
 
 <footer>
-    © Robopie Inc. 2025 | Follow us on <a href="https://www.instagram.com/robo_pie/" target="_blank" style="color:#ffdd00;">@robo_pie</a>
+  © Robopie Inc. 2025 | Instagram: <a href="https://www.instagram.com/robo_pie/" target="_blank" style="color:#00ff88;">@robo_pie</a>
 </footer>
 
 <script>
