--- a/index.html
+++ b/index.html
@@ -150,11 +150,15 @@
     </div>
   </div>
 
-</div>
-
-<!-- IoT -->
-<div class="category-title">IoT</div>
-<div class="accordion">
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Neopixel LED
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Neopixle LED/NeopixelLED.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
 
   <div class="accordion-item">
     <div class="accordion-header" onclick="toggleAccordion(this)">
@@ -168,20 +172,24 @@
 
 </div>
 
+<!-- IoT -->
+<div class="category-title">IoT</div>
+<div class="accordion">
+  <div class="accordion-item">
+    <div class="accordion-header">
+      No tutorials yet
+    </div>
+  </div>
+</div>
+
 <!-- Raspberry Pi -->
 <div class="category-title">Raspberry Pi</div>
 <div class="accordion">
-
   <div class="accordion-item">
-    <div class="accordion-header" onclick="toggleAccordion(this)">
-      Neopixel LED
-      <span class="arrow">&#9654;</span>
-    </div>
-    <div class="accordion-content">
-      <a href="Neopixle LED/NeopixelLED.html" target="_blank">Open Tutorial</a>
+    <div class="accordion-header">
+      No tutorials yet
     </div>
   </div>
-
 </div>
 
 <footer>
