--- a/index.html
+++ b/index.html
@@ -77,13 +77,7 @@
 <button class="accordion">Basics</button>
 <div class="panel">
   <div class="tutorial">
-    <a href="Blinking LEDs/BlinkingLEDs.html" target="_blank">Blinking LEDs</a>
-  </div>
-  <div class="tutorial">
-    <a href="Introduction to Data Types in C-C++ for Arduino Programming/IntroductiontoDataTypesinCCforArduinoProgramm.html" target="_blank">Introduction to Data Types in C-C++ for Arduino Programming</a>
-  </div>
-  <div class="tutorial">
-    <a href="Servo Motor with a Potentiometer/ServoMotorwithaPotentiometer.html" target="_blank">Servo Motor with a Potentiometer</a>
+    <a href="Electronics and Robotics Terms for Students/ElectronicsandRoboticsTermsforStudents.html" target="_blank">Electronics and Robotics Terms for Students</a>
   </div>
 </div>
 
@@ -96,28 +90,13 @@
     <a href="Controlling a 7-Segment Display via Serial Monitor using Arduino/Controllinga7SegmentDisplayviaSerialMonitorus.html" target="_blank">Controlling a 7-Segment Display via Serial Monitor using Arduino</a>
   </div>
   <div class="tutorial">
-    <a href="Electronics and Robotics Terms for Students/ElectronicsandRoboticsTermsforStudents.html" target="_blank">Electronics and Robotics Terms for Students</a>
-  </div>
-  <div class="tutorial">
-    <a href="Neopixel LED/NeopixelLED.html" target="_blank">Neopixel LED</a>
+    <a href="Neopixle LED/NeopixelLED.html" target="_blank">Neopixel LED</a>
   </div>
   <div class="tutorial">
     <a href="SMART DUSTBIN SYSTEM TUTORIAL/SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">SMART DUSTBIN SYSTEM TUTORIAL</a>
   </div>
   <div class="tutorial">
     <a href="Ultrasonic Radar with Arduino/UltrasonicRadarwithArduino.html" target="_blank">Ultrasonic Radar with Arduino</a>
-  </div>
-  <div class="tutorial">
-    <a href="Obstacle avoiding robot using IR sensor and L298 motor driver/ObstacleavoidingrobotusingIRsensorandL298moto.html" target="_blank">Obstacle Avoiding Robot using IR Sensor and L298 Motor Driver</a>
-  </div>
-  <div class="tutorial">
-    <a href="Paani poori dispenser machine/Paanipooridispensermachine.html" target="_blank">Paani Poori Dispenser Machine</a>
-  </div>
-  <div class="tutorial">
-    <a href="Ultrasonic Radar with Arduino(python verson)/UltrasonicRadarwithArduino.html" target="_blank">Ultrasonic Radar with Arduino (Python Version)</a>
-  </div>
-  <div class="tutorial">
-    <a href="Joystick controlling Car/JoystickcontrollingCar.html" target="_blank">Joystick Controlling Car</a>
   </div>
   <div class="tutorial">
     <a href="🚀 Arduino Joystick Controlled LED Project/ArduinoJoystickControlledLEDProject.html" target="_blank">Arduino Joystick Controlled LED Project</a>
@@ -128,25 +107,6 @@
 <div class="panel">
   <div class="tutorial">
     <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Automatic Plant Watering System Using Soil Moisture Sensor and Arduino</a>
-  </div>
-  <div class="tutorial">
-    <a href="Firebase Data Upload & Download with ESP8266 and ESP32/FirebaseDataUploadDownloadwithESP8266andESP32.html" target="_blank">Firebase Data Upload & Download with ESP8266 and ESP32</a>
-  </div>
-</div>
-
-<button class="accordion">Raspberry Pi</button>
-<div class="panel">
-  <div class="tutorial">
-    <a href="Reading Data from Firebase Using Raspberry Pi/FirebaseIntegrationwithRaspberryPiUploadingan.html" target="_blank">Reading Data from Firebase Using Raspberry Pi</a>
-  </div>
-  <div class="tutorial">
-    <a href="Uploading IR Sensor Readings to Firebase Using Raspberry Pi/FirebaseIntegrationwithRaspberryPiUploadingan.html" target="_blank">Uploading IR Sensor Readings to Firebase Using Raspberry Pi</a>
-  </div>
-  <div class="tutorial">
-    <a href="Controlling an LED Using Firebase Data on Raspberry Pi/FirebaseIntegrationwithRaspberryPiUploadingan.html" target="_blank">Controlling an LED Using Firebase Data on Raspberry Pi</a>
-  </div>
-  <div class="tutorial">
-    <a href="Firebase Integration with Raspberry Pi- Uploading and Reading Data Using Python/FirebaseIntegrationwithRaspberryPiUploadingan.html" target="_blank">Firebase Integration with Raspberry Pi - Uploading and Reading Data Using Python</a>
   </div>
 </div>
 
