--- a/index.html
+++ b/index.html
@@ -132,6 +132,36 @@
 
   <div class="accordion-item">
     <div class="accordion-header" onclick="toggleAccordion(this)">
+      Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Controlling a 7-Segment Display via Serial Monitor using Arduino
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Controlling a 7-Segment Display via Serial Monitor using Arduino/Controllinga7SegmentDisplayviaSerialMonitorus.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Neopixel LED
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Neopixle LED/NeopixelLED.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
       SMART DUSTBIN SYSTEM TUTORIAL
       <span class="arrow">&#9654;</span>
     </div>
@@ -152,21 +182,11 @@
 
   <div class="accordion-item">
     <div class="accordion-header" onclick="toggleAccordion(this)">
-      Neopixel LED
+      Arduino Joystick Controlled LED Project
       <span class="arrow">&#9654;</span>
     </div>
     <div class="accordion-content">
-      <a href="Neopixle LED/NeopixelLED.html" target="_blank">Open Tutorial</a>
-    </div>
-  </div>
-
-  <div class="accordion-item">
-    <div class="accordion-header" onclick="toggleAccordion(this)">
-      Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
-      <span class="arrow">&#9654;</span>
-    </div>
-    <div class="accordion-content">
-      <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Open Tutorial</a>
+      <a href="Arduino Joystick Controlled LED Project/ArduinoJoystickControlledLEDProject.html" target="_blank">Open Tutorial</a>
     </div>
   </div>
 
@@ -212,4 +232,3 @@ function toggleAccordion(element) {
 
 </body>
 </html>
-
