--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
     </div>
   </div>
 
-  <div class="accordion-item">
-    <div class="accordion-header" onclick="toggleAccordion(this)">
-      Arduino Joystick Controlled LED Project
-      <span class="arrow">&#9654;</span>
-    </div>
-    <div class="accordion-content">
-      <a href="Arduino Joystick Controlled LED Project/ArduinoJoystickControlledLEDProject.html" target="_blank">Open Tutorial</a>
-    </div>
+ <div class="accordion-item">
+  <div class="accordion-header" onclick="toggleAccordion(this)">
+    Arduino Joystick Controlled LED Project
+    <span class="arrow">&#9654;</span>
   </div>
+  <div class="accordion-content">
+    <a href="Arduino%20Joystick%20Controlled%20LED%20Project/ArduinoJoystickControlledLEDProject.html" target="_blank">Open Tutorial</a>
+  </div>
+</div>
 
 </div>
 
