--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
   <div class="subheader">Learn | Build | Innovate</div>
 </header>
 
-<!-- Basics -->
 <div class="category-title">Basics</div>
+
 <div class="accordion">
 
   <div class="accordion-item">
@@ -114,65 +114,79 @@
     </div>
   </div>
 
-</div>
-
-<!-- Robotics -->
-<div class="category-title">Robotics</div>
-<div class="accordion">
-
   <div class="accordion-item">
     <div class="accordion-header" onclick="toggleAccordion(this)">
-      4-Digit Password Lock Using Keypad & Servo Motor with Arduino
+      Introduction to Data Types in C-C++ for Arduino Programming
       <span class="arrow">&#9654;</span>
     </div>
     <div class="accordion-content">
-      <a href="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">Open Tutorial</a>
+      <a href="Introduction to Data Types in C-C++ for Arduino Programming/IntroductiontoDataTypesinCCforArduinoProgramm.html" target="_blank">Open Tutorial</a>
     </div>
   </div>
 
   <div class="accordion-item">
     <div class="accordion-header" onclick="toggleAccordion(this)">
-      Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
+      Arduino Joystick Controlled LED Project
       <span class="arrow">&#9654;</span>
     </div>
     <div class="accordion-content">
-      <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Open Tutorial</a>
+      <a href="Arduino%20Joystick%20Controlled%20LED%20Project/ArduinoJoystickControlledLEDProject.html" target="_blank">Open Tutorial</a>
     </div>
   </div>
 
   <div class="accordion-item">
     <div class="accordion-header" onclick="toggleAccordion(this)">
-      Controlling a 7-Segment Display via Serial Monitor using Arduino
+      Blinking LEDs
       <span class="arrow">&#9654;</span>
     </div>
     <div class="accordion-content">
-      <a href="Controlling a 7-Segment Display via Serial Monitor using Arduino/Controllinga7SegmentDisplayviaSerialMonitorus.html" target="_blank">Open Tutorial</a>
+      <a href="Blinking LEDs/BlinkingLEDs.html" target="_blank">Open Tutorial</a>
     </div>
   </div>
 
   <div class="accordion-item">
     <div class="accordion-header" onclick="toggleAccordion(this)">
-      Neopixel LED
+      Joystick controlling Car
       <span class="arrow">&#9654;</span>
     </div>
     <div class="accordion-content">
-      <a href="Neopixle LED/NeopixelLED.html" target="_blank">Open Tutorial</a>
+      <a href="Joystick controlling Car/JoystickcontrollingCar.html" target="_blank">Open Tutorial</a>
     </div>
   </div>
 
   <div class="accordion-item">
     <div class="accordion-header" onclick="toggleAccordion(this)">
-      SMART DUSTBIN SYSTEM TUTORIAL
+      Obstacle Avoiding Robot using IR sensor and L298 Motor Driver
       <span class="arrow">&#9654;</span>
     </div>
     <div class="accordion-content">
-      <a href="SMART DUSTBIN SYSTEM TUTORIAL/SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">Open Tutorial</a>
+      <a href="Obstacle avoiding robot using IR sensor and L298 motor driver/ObstacleavoidingrobotusingIRsensorandL298moto.html" target="_blank">Open Tutorial</a>
     </div>
   </div>
 
   <div class="accordion-item">
     <div class="accordion-header" onclick="toggleAccordion(this)">
-      Ultrasonic Radar with Arduino
+      Paani Poori Dispenser Machine
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Paani poori dispenser machine/Paanipooridispensermachine.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Servo Motor with a Potentiometer
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Servo Motor with a Potentiometer/ServoMotorwithaPotentiometer.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Ultrasonic Radar with Arduino (Python Version)
       <span class="arrow">&#9654;</span>
     </div>
     <div class="accordion-content">
@@ -180,37 +194,47 @@
     </div>
   </div>
 
- <div class="accordion-item">
-  <div class="accordion-header" onclick="toggleAccordion(this)">
-    Arduino Joystick Controlled LED Project
-    <span class="arrow">&#9654;</span>
-  </div>
-  <div class="accordion-content">
-    <a href="Arduino%20Joystick%20Controlled%20LED%20Project/ArduinoJoystickControlledLEDProject.html" target="_blank">Open Tutorial</a>
-  </div>
-</div>
-
-</div>
-
-<!-- IoT -->
-<div class="category-title">IoT</div>
-<div class="accordion">
   <div class="accordion-item">
-    <div class="accordion-header">
-      No tutorials yet
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Firebase Data Upload & Download with ESP8266 and ESP32
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Firebase Data Upload & Download with ESP8266 and ESP32/FirebaseDataUploadDownloadwithESP8266andESP32.html" target="_blank">Open Tutorial</a>
     </div>
   </div>
-</div>
 
-<!-- Raspberry Pi -->
-<div class="category-title">Raspberry Pi</div>
-<div class="accordion">
   <div class="accordion-item">
-    <div class="accordion-header">
-      No tutorials yet
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Controlling an LED Using Firebase Data on Raspberry Pi
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Controlling an LED Using Firebase Data on Raspberry Pi/FirebaseIntegrationwithRaspberryPiUploadingan.html" target="_blank">Open Tutorial</a>
     </div>
   </div>
-</div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Uploading IR Sensor Readings to Firebase Using Raspberry Pi
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Uploading IR Sensor Readings to Firebase Using Raspberry Pi/FirebaseIntegrationwithRaspberryPiUploadingan.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Reading Data from Firebase Using Raspberry Pi
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Reading Data from Firebase Using Raspberry Pi/FirebaseIntegrationwithRaspberryPiUploadingan.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+</div> <!-- Accordion ends properly here -->
 
 <footer>
   © Robopie Inc. 2025 | Instagram: <a href="https://www.instagram.com/robo_pie/" target="_blank" style="color:#00ff88;">@robo_pie</a>
