--- a/index.html
+++ b/index.html
@@ -177,6 +177,76 @@
       <a href="Servo Motor with a Potentiometer/ServoMotorwithaPotentiometer.html" target="_blank">Open Tutorial</a>
     </div>
   </div>
+    <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Displaying 'Hello World' on a 0.96 OLED
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Displaying 'Hello World' on a 0.96 OLED/DisplayingHelloWorldona0.96OLED.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      KY-039 Finger Detection Heartbeat Sensor with Arduino - A Beginner's Guide
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="KY-039 Finger Detection Heartbeat Sensor with Arduino - A Beginner's Guide/KY039FingerDetectionHeartbeatSensorwithArduin.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      SMART DUSTBIN SYSTEM TUTORIAL
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="SMART DUSTBIN SYSTEM TUTORIAL/SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Ultrasonic Distance Measurement with Arduino
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Ultrasonic Distance Measurement with Arduino/UltrasonicDistanceMeasurementwithArduino.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Arduino Buzzer and Button-Based Music Player (Sa Re Ga Ma Piano)
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Arduino Buzzer and Button-Based Music Player (Sa Re Ga Ma Piano)/ArduinoBuzzerandButtonBasedMusicPlayer_SaReGa.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Arduino Serial Communication
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Arduino Serial Communication/ArduinoSerialCommunication.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header" onclick="toggleAccordion(this)">
+      Controlling a 7-Segment Display via Serial Monitor using Arduino
+      <span class="arrow">&#9654;</span>
+    </div>
+    <div class="accordion-content">
+      <a href="Controlling a 7-Segment Display via Serial Monitor using Arduino/Controllinga7SegmentDisplayviaSerialMonitorus.html" target="_blank">Open Tutorial</a>
+    </div>
+  </div>
+
 </div>
 
 <!-- IoT -->
